Make sure image viewer close button is not hidden by header

--- a/uav/uav/bootstrap-less/less/custom/layout.less
+++ b/uav/uav/bootstrap-less/less/custom/layout.less
@@ -2,6 +2,10 @@ body {
   padding-top: 58px;
   .mq(@grid-float-breakpoint, { padding-top: 158px;});
 }
+button.action--close {
+  top: 58px;
+  .mq(@grid-float-breakpoint, { top: 158px;});
+}
 nav.navbar {
   margin-bottom: 0;
   border: none;
